# RustFlow

./: .dockerignore  .gitignore  CLI_USER_GUIDE.md  Cargo.toml  Dockerfile  INTEGRATION_GUIDE.md  README.md  USER_GUIDE.md  build.rs  build_errors.txt  clippy_output.txt  debug_test.yaml  docker-compose.yml  test_data.json
.agent/rules/: advanced-react-component-patterns.md  css-design.md  default-to-moving.md  refactoring-principles.md  rust-development.md  visual-checking.md  web-development.md  web-security.md  webassembly-expert.md
examples/: agent_test.yaml  basic.yaml  code_test.yaml  ecommerce_test.yaml  generate_data.py  http_test.yaml  integration_test.yaml  notion_test.yaml  python_test.yaml  real_world_test.yaml  split_join.yaml  union_test.yaml
examples/data/: orders.json  users.json
examples/integrations/: notion.yaml  slack.yaml
experimental/rust_flow_wasm/: Cargo.toml
integrations/: notion.yaml  slack.yaml  test_error.yaml  test_polling.yaml
logs/: Console.txt
rust_flow_macros/: Cargo.toml
rust_flow_macros/src/: lib.rs
rust_flow_wasm/: Cargo.toml
rust_flow_wasm/src/: lib.rs
src/: integration_registry.rs  integrations.rs  job_manager.rs  lib.rs  node_registry.rs  schema.rs
src/cli/: builder.rs  commands.rs  config.rs  handlers.rs  inspector.rs  interactive.rs  mod.rs
src/storage/: encryption.rs  mod.rs  postgres.rs  remote.rs  sqlite.rs
src/stream_engine/: executor.rs  expressions.rs  factory.rs  mod.rs  utils.rs
src/stream_engine/nodes/: agent_node.rs  delay_node.rs  file_source.rs  html_extract_node.rs  http_request_node.rs  integration_node.rs  join_node.rs  manual_trigger.rs  mod.rs  router_node.rs  set_data.rs  union_node.rs  webhook_trigger.rs
src/stream_engine/nodes/actions/: code_node.rs  connectivity.rs  console_output.rs  execute_workflow_node.rs  file_ops.rs  function_node.rs  http_request_node.rs  loop_node.rs  mod.rs  return_node.rs  select_node.rs  set_data.rs  sql_node.rs  wait_node.rs
src/stream_engine/nodes/ai/: mod.rs
src/stream_engine/nodes/data/: accumulate_node.rs  dedupe_node.rs  file_source.rs  group_by_node.rs  join_node.rs  mod.rs  split_node.rs  stats_node.rs  union_node.rs
src/stream_engine/nodes/integrations/: integration_node.rs  mod.rs
src/stream_engine/nodes/logic/: mod.rs  router_node.rs  switch_node.rs
src/stream_engine/nodes/triggers/: child_workflow_trigger.rs  manual_trigger.rs  mod.rs  time_trigger.rs  webhook_trigger.rs
tests/: accumulate_test.rs  error_continue.yaml  expressions_test.rs  file_ops_test.rs  http_auto_split_test.rs  integration_test.rs  loop_child.yaml  loop_parent.yaml  persistence_test.rs  scenario_accumulate.yaml  scenario_branching.yaml  scenario_error_handling.yaml  scenario_router_operators.yaml  scenario_split.yaml  scenario_transform_state.yaml  select_test.rs  sql_node_test.rs  sub_workflow_child.yaml  sub_workflow_parent.yaml  switch_test.rs  wait_scatter_gather.yaml
ui/: package-lock.json  package.json
ui/src/: App.tsx  api.ts  layout.css  types.ts
ui/src/components/: CustomNode.tsx  DebugPanel.tsx  FlowCanvas.tsx  NodePalette.tsx  PropertiesPanel.tsx  Sidebar.tsx  Toolbar.tsx
ui/src/components/nodes/: AgentNode.tsx  BaseNode.tsx  ModelNode.tsx
ui/src/hooks/: useWebSocket.ts
ui/src/lib/: workflow-utils.ts
