[package]
name = "rust_flow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
boa_engine = "0.21.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
rustpython-vm = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1.48.0", features = ["sync", "macros"], default-features = false }
tracing = "0.1.43"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[features]
default = ["rt"]
rt = ["tokio/rt-multi-thread", "tokio/rt"]
