[package]
name = "rust_flow"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["rust_flow_wasm", "rust_flow_macros"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
boa_engine = "0.21.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
minijinja = "2.13.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
rustpython-vm = "0.4.0"
scraper = "0.22.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1.48.0", features = ["sync", "macros"], default-features = false }
tracing = "0.1.43"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rust_flow_macros = { path = "rust_flow_macros" }
axum = "0.8.7"
tower-http = { version = "0.6.7", features = ["cors"] }
tracing-subscriber = "0.3.22"

[features]
default = ["rt"]
rt = ["tokio/rt-multi-thread", "tokio/rt"]
