[package]
name = "rust_flow_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
rust_flow = { path = "..", default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"

